--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
-        <button>영화 기록하기!</button>
+        <h1>내 생애 최고의 영화들!</h1>
+        <button>영화 기록하기</button>
     </div>
     <div class="mypost">
         <div class="form-floating mb-3">
